# Backend-Neural-Network

./: README.md  client.py  coam.py  environment.yml  pyproject.toml  requirments.txt  server.py
demo/.ipynb_checkpoints/: visualisation-checkpoint.ipynb
models/: multi_resolution.py
utils/: visualization_utils.py
